# minisecurity

./: .gitignore  CMakeLists.txt  Makefile  README.md  install.sh  out.avi
include/: capture.h  classifier.h  dvr.h  process.h  processor.h
scripts/: clean.sh  install_opencv.sh  install_yolo.sh
src/: capture.cpp  capture.h  classifier.cpp  dvr.cpp  process.cpp  processor.cpp  run.cpp
