cmake_minimum_required(VERSION 2.8)
project( MiniSecurity )
find_package( OpenCV REQUIRED )
include_directories( include ${OpenCV_INCLUDE_DIRS} )
file(GLOB SOURCES "src/*.cpp")
add_executable( run ${SOURCES} )
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
target_link_libraries( run ${OpenCV_LIBS} )
